16-2-hw/k8s/ingress/falskpc-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboead-ingress
  namespace: kubernetes-dashboard
spec:
  # tls:
  # - hosts:
  #   - dashboard.com
  #   secretName: dashboard-tls-secret
  rules:
    - host: dash.dashboard.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard 
                port: 
                  number: 80  
    - host: flask.dashboard.com
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaskpc-service
                port:
                  number: 5000
